prevent centered content from shifting when scrollbar appears

--- a/cmd/aurelius/assets/static/css/main.css
+++ b/cmd/aurelius/assets/static/css/main.css
@@ -172,6 +172,37 @@ main {
 	}
 }
 
+/* Prevent centered content from shifting when scrollbar appears */
+@media (min-width: 1200px) {
+	body {
+		background:
+			calc(50vw - (960px + 2rem) / 2) top / calc(960px + 2rem) fixed no-repeat linear-gradient(
+				hsl(39, 8%, 43%) 50%,
+				hsl(39, 8%, 30%)),
+			left top / calc((100vw - (960px + 2rem)) / 2) fixed no-repeat linear-gradient(
+				to right,
+				rgba(0,0,0,.25) calc(100% - 150px),
+				rgba(0,0,0,.35) 100%),
+			right top / calc((100vw - (960px + 2rem)) / 2) fixed no-repeat linear-gradient(
+				to left,
+				rgba(0,0,0,.25) calc(100% - 150px),
+				rgba(0,0,0,.35) 100%),
+			fixed url("/static/img/bg.svgz"),
+			fixed linear-gradient(
+				hsl(39, 8%, 43%) 50%,
+				hsl(39, 8%, 30%));
+	}
+
+	html {
+		margin-left: calc(100vw - 100%);
+		margin-right: 0;
+	}
+
+	#play-controls {
+		left: calc(50% + (100vw - 100%) / 2);
+	}
+}
+
 @media (min-width: 1200px) {
 	#play-controls {
 		bottom: inherit;
